<resources>
    <string name="app_name">WhiteBall</string>
    <string name="ball">ball</string>
    <string name="square">square</string>
    <string name="start">Start</string>
    <string name="whiteball">WhiteBall</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resume">resume</string>
    <string name="exit">exit</string>
    <string name="retry">retry</string>
    <string name="go_to_menu">go to menu</string>
    <string name="restart">restart</string>
    <string name="settings">settings</string>
    <string name="back">back</string>
    <string name="sixty">60</string>
    <string name="thirty">30</string>
    <string name="fps">FPS</string>
    <string name="music">MUSIC</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="sound">SOUND</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="game_mode">MODE</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="authors">by Alessandro Marcantoni and Simone Romagnoli</string>
    <string name="xy">XY</string>
    <string name="preferences">com.example.whiteball.PREFERENCES</string>
    <string name="x_high_score">x_high_score</string>
    <string name="y_high_score">y_high_score</string>
    <string name="xy_high_score">xy_high_score</string>
    <string name="scores">scores</string>
    <string name="dot">.</string>
</resources>
