<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#000000"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:id="@+id/settings_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/fps_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#000000"
                android:fontFamily="sans-serif-medium"
                android:text="@string/fps"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/fps_30_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#000000"
                android:text="@string/thirty"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/fps_60_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#000000"
                android:text="@string/sixty"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#000000"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>


</FrameLayout>