<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".fragments.GameFragment" >
<!--
    <TextView
        android:id="@+id/dot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:paddingTop="73sp"
        android:paddingRight="52sp"
        android:text="@string/dot"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="80sp" /> -->

    <LinearLayout
        android:id="@+id/paused_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:visibility="visible">

        <Button
            android:id="@+id/resume_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#000000"
            android:text="@string/resume"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/restart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#000000"
            android:text="@string/restart"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#000000"
            android:text="@string/exit"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/pause_button"
        android:layout_width="117dp"
        android:layout_height="115dp"
        android:background="@drawable/pause" />

</FrameLayout>